<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    takePhohto
    <string name="parse_app_id">wZRAPJETqif5DQnOfJWeTaeDEiC1ZR30JHOO9Nke</string>
    <string name="parse_client_key">NEq6AXeu5VXmJbSZBxc9A8Mnnb0ebBfu2yfyqR3s</string>
    <string name="apply">Apply</string>
    <string name="takePhoto">Take Photo!</string>

    <string name="app_name">Do it</string>
    <string name="welcome">Welcome</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_starter">Starter</string>
    <string name="Do_it">DO IT.</string>
    <string name="account_log_in_greeting">LOGIN TO YOUR ACCOUNT</string>
    <string name="email">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">FORGOT PASSWORD ?</string>
    <string name="login">Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="title_activity_authenticate">AuthenticateActivity</string>
    <string name="LogOut">Logout</string>
    <string name="jon_doe">John Doe</string>
    <string name="user_bio">placeholder test for the user bio goes here. They can write a breif discription of themselves</string>
    <string name="badges">Badges</string>
    <string name="followers">Followers</string>
    <string name="Follow">Follow</string>
    <string name="Unfollow">Unfollow</string>

    <string name="following">Following</string>
    <string name="number">10</string>
    <string name="Test">Test list item</string>
    <string name="Do_it_select_goal">DO IT. SELECT A GOAL</string>
    <string name="current_step">Current task:</string>
    <string name="last_completed_task">Last completed:</string>
    <string name="twenty_perccent">20 %</string>
    <string name="NextStep">Next Step</string>
    <string name="name">name:</string>
    <string name="setting">Settings</string>
    <string name="bio"> Bio:</string>
    <string name="explore"> explore</string>
    <string name="friends_who_have">Members who have:</string>
    <string name="upload">upload goal</string>
    <string name="upload_goal">upload goal</string>
    <string name="add_step">Add Step</string>
    <string name="write_task">add task</string>
    <string name="categories">you can add goals in:</string>
    <string name="goal_title">goal title..</string>
    <string name="action_share"> share..</string>
    <string name="share_step_text">I am in step:</string>
    <string name="check_my_finished_Goals">Check My Finished Goals</string>
    <string name="you_selected">You selected :</string>
    <string name="history">Goals History</string>
    <string name="timeLine">Timeline</string>
    <string name="just_added">Just added</string>
    <string name="first_step">in the first step of</string>
    <string name="half_way">half way throgh in</string>
    <string name="almost_finish">yalmost finish</string>
    <string name="finished">finished</string>
    <string name="in_step">in step: </string>
    <string name="of">of </string>
    <string name="yourChannels">your Channels</string>
    <string name="congrats">congrats</string>
    <string name="no_task_left">Wow! No more tasks!</string>
    <string name="no_user">No such user exist, please signup</string>
    <string name="Logged_in">Successfully Logged in</string>
    <string name="You_followed">You followed</string>
    <string name="You_unfollowed">You unfollowed</string>
    <string name="Select_Picture">"Select Picture"</string>
    <string name="choose_channel">"choose channel to subscribe:"</string>
    <string name="subscribe">"subscribe!"</string>
    <string name="unsubscribe_yes">"click yes to unsubscribe from :"</string>

    <string name="unsubscribe_from">"unsubscribe from :"</string>
    <string name="browse">Browse</string>
    <string name="timeline">Timeline</string>
    <string name="Upload">Upload</string>
    <string name="Name">Name</string>
    <string name="userbio">Enter your bio</string>
    <string name="subscription">Subscription</string>
    <string name="add_new_goal">Create New Goal</string>
    <string name="history_goal">Goal History</string>
    <string name="goal_categories">Select the goal category</string>
    <string name="orange">Select the goal category</string>
    <string name="light_orange_1">#ffc166</string>
    <string name="light_orange_2">#ffb74d</string>
    <string name="light_orange_3">#ffac33</string>
    <string name="light_orange_4">#ffa21a</string>
    <string name="light_orange_5">#ff9700</string>
    <string name="dark_orange">#F7931E</string>
    <string name="light_gray">#d3d3d3</string>
    <string name="read"> Read</string>
    <string name="watch">Watch</string>
    <string name="Cook">Cook</string>
    <string name="IT">IT</string>
    <string name="Travel">Travel</string>
    <string name="name1">name</string>
    <string name="Category">Category</string>

</resources>
