<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.parse.starter.StarterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="70dp"
        android:paddingTop="10dp">



        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/browse"
                android:id="@+id/browse"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/browse_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/browse"
                android:textSize="10sp"
                android:textStyle="normal"
                android:textColor="@color/textColor"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/timeline"
                android:id="@+id/timeLine"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/timeline_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/timeline"
                android:textSize="10sp"
                android:textStyle="normal"
                android:textColor="@color/textColor"
                />

        </LinearLayout>


            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/setting"
                    android:src="@drawable/settings"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/setting"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    android:textColor="@color/textColor"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/log_out"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/power"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/log_out_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/LogOut"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    android:textColor="@color/textColor"
                />

        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/userIcon"
        android:src="@drawable/user_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/nameText"
        android:text="@string/jon_doe"
        android:textColor="@color/dark_orange"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIcon"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />


    <TextView
    android:id="@+id/badgestTextNumber"
    android:text="@string/number"
    android:textSize="18sp"
    android:textColor="@color/textColor"
    android:layout_marginTop="250dp"
    android:layout_marginLeft="70dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/followersTextNumber"
        android:text="@string/number"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="170dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/followeingTextNumber"
        android:text="@string/number"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="270dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/bio"
        android:text="@string/user_bio"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/badges"
        android:text="@string/badges"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="@color/transparent_white"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="55dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/followers"
        android:text="@string/followers"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="@color/transparent_white"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/following"
        android:text="@string/following"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="@color/transparent_white"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="245dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ListView
        android:layout_below="@+id/bio"
        android:layout_marginTop="70dp"
        android:background="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/Goals_list"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
