<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.parse.starter.Starter">

    <ImageView
        android:id="@+id/icon"
        android:src="@drawable/doit_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/log_out"
        android:layout_toEndOf="@+id/log_out" />
    <TextView
        android:id="@+id/logoText"
        android:text="@string/Do_it"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoText"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogOut"
        android:id="@+id/log_out"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="browse "
        android:id="@+id/browse"
        android:textSize="12dp"
        android:layout_below="@+id/Goals_list"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Goals_list"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/log_out" />

</RelativeLayout>
